[Fix] Solve hidden visibility of builder when screen-option is update

--- a/assets/styles/admin.scss
+++ b/assets/styles/admin.scss
@@ -59,6 +59,7 @@ label[for="axisbuilder-editor-hide"] {
  * Builder Meta-Box
  */
 #axisbuilder-editor {
+	display: block !important;
 
 	.inside {
 		margin: 0;
